2.1.0/_sources/gallery/pyplots/whats_new_1_subplot3d.rst.txt


.. _sphx_glr_gallery_pyplots_whats_new_1_subplot3d.py:


=====================
Whats New 1 Subplot3d
=====================





.. image:: /gallery/pyplots/images/sphx_glr_whats_new_1_subplot3d_001.png
    :align: center





.. code-block:: python

    from mpl_toolkits.mplot3d.axes3d import Axes3D
    from matplotlib import cm
    #from matplotlib.ticker import LinearLocator, FixedLocator, FormatStrFormatter
    import matplotlib.pyplot as plt
    import numpy as np

    fig = plt.figure()

    ax = fig.add_subplot(1, 2, 1, projection='3d')
    X = np.arange(-5, 5, 0.25)
    Y = np.arange(-5, 5, 0.25)
    X, Y = np.meshgrid(X, Y)
    R = np.sqrt(X**2 + Y**2)
    Z = np.sin(R)
    surf = ax.plot_surface(X, Y, Z, rstride=1, cstride=1, cmap=cm.jet,
            linewidth=0, antialiased=False)
    ax.set_zlim3d(-1.01, 1.01)

    #ax.w_zaxis.set_major_locator(LinearLocator(10))
    #ax.w_zaxis.set_major_formatter(FormatStrFormatter('%.03f'))

    fig.colorbar(surf, shrink=0.5, aspect=5)

    from mpl_toolkits.mplot3d.axes3d import get_test_data
    ax = fig.add_subplot(1, 2, 2, projection='3d')
    X, Y, Z = get_test_data(0.05)
    ax.plot_wireframe(X, Y, Z, rstride=10, cstride=10)

    plt.show()


**Total running time of the script:** ( 0 minutes  0.129 seconds)



.. only :: html

 .. container:: sphx-glr-footer


  .. container:: sphx-glr-download

     :download:`Download Python source code: whats_new_1_subplot3d.py <whats_new_1_subplot3d.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: whats_new_1_subplot3d.ipynb <whats_new_1_subplot3d.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.readthedocs.io>`_
